
Changelog:
==========

v1.02.1

- New features

OSX build now uses Java 1.5 instead of 1.6 so it should be able to run on more macs

- Fixes

Major Bug in server start due to a faulty MAC address retrieval 
PMS do not start after activating the archive browsing option
Media library small fixes
Subtitles now work by default on OSX

v1.02

- New features

Auto-updater, default configuration, cleanups and windows/linux build scripts (thanks to Tim Cox)
Media library (also act as a parsing cache)
Playlists (m3u/pls) support
Preliminary album art support, better audio (flac) and tags parsing
New options for video resolution, deinterlace filter, and archives browsing
Better video settings with virtual PS3 menu (A/V sync, deinterlace, ...)
Windows service installer (working on 32 bits only)
New image parsing library: Better performance / EXIF support (sort photos by camera model, etc.)
DVR-MS addon

- Fixes

A/V out of sync issues with some ISOs and medias / codecs support improvement (flv, rmvb, hdmov, mp4, multichannels avi, etc.)
External subtitles not always loaded
Upnp advertising issue in search reply to the ps3 (thanks to Daniel Pedersen)
SkipLoopFilter is now disabled by default
Regression since 0.98, server would not start on some machines
Newest builds of ffmpeg/mplayer/mencoder for win32
Usual bunch of fixes

v1.01:

- New features

Mac OSX version !! (thanks to Robin Mulder)
Audio High Fidelity engine: 24bits/96kHz/5.1 FLAC support (HDMI receiver mandatory)
French localization
Audio/Subtitles priority settings (same as Haali Media Splitter)
Truetype font setting, with some new codepages, for asian subtitles

- Fixes:

m4a and aac are now transcoded by default (iTunes Apple Lossless compatibility)
seeking issues with dvr-ms and tsMuxer with AC3/PCM mode
Displayed aspect ratio preserved


v1.00:

- New Features

GPL licensing :)
IDX/SUB support for AviSynth ONLY
Revamped some UI, especially transcoding settings