@@ -79,25 +79,47 @@ public class PmsConfiguration {
 	private static final String KEY_MENCODER_MAIN_SETTINGS = "mencoder_encode";
 	private static final String KEY_LOGGING_LEVEL = "level";
 	private static final String KEY_ENGINES = "engines";
+	private static final String KEY_CODEC_SPEC_SCRIPT = "codec_spec_script";
 	
 	private static final int DEFAULT_SERVER_PORT = 5001;
 	private static final int DEFAULT_PROXY_SERVER_PORT = -1;
-	private static final int UNLIMITED_BITRATE = 0;
+	private static final String UNLIMITED_BITRATE = "0";
 	
 	private static final String DEFAULT_AVI_SYNTH_SCRIPT = 
 		  "#AviSynth script is now fully customisable !\n" 
 		+ "#You must use the following variables (\"clip\" being the avisynth variable of the movie):\n"
-		+ "#<movie>: insert the complete DirectShowSource instruction [ clip=DirectShowSource(movie, convertfps) ]" 
-		+ "#<sub>: insert the complete TextSub/VobSub instruction if there's any detected srt/sub/idx/ass subtitle file" 
-		+ "#<moviefilename>: variable of the movie filename, if you want to do all this by yourself" 
-		+ "#Be careful, the custom script MUST return the clip object"
-		+ "<movie>" 
-		+ "<sub>" 
+		+ "#<movie>: insert the complete DirectShowSource instruction [ clip=DirectShowSource(movie, convertfps) ]\n" 
+		+ "#<sub>: insert the complete TextSub/VobSub instruction if there's any detected srt/sub/idx/ass subtitle file\n" 
+		+ "#<moviefilename>: variable of the movie filename, if you want to do all this by yourself\n" 
+		+ "#Be careful, the custom script MUST return the clip object\n"
+		+ "<movie>\n" 
+		+ "<sub>\n" 
 		+ "return clip";
+	
+	private static final String DEFAULT_CODEC_CONF_SCRIPT = 
+		  "#Here you can put specific parameters for some codec combinations.\n" 
+		+ "#It's mostly for A/V synchronization issues, but it can be used for anything else as well\n" 
+		+ "#Consider it like very expert settings as this shouldn't be modified if you don't know exactly what you're doing\n" 
+		+ "#\n" 
+		+ "#Syntax is {java condition} : {mencoder options}  ; You can cumulate several options\n"
+		+ "#Ttokens authorized: container vcodec acodec samplerate framerate (xx000/1001) width height\n" 
+		+ "#Careful, any malformed line will be wiped out\n" 
+		+ "#\n" 
+		+ "#Special options:\n" 
+		+ "# -noass:  definitely disable ASS/SSA subtitles as they can mess up A/V sync\n" 
+		+ "# -nosync: definitely disable A/V sync alternative method for this condition (-mc usage will do the same)\n" 
+		+ "#\n" 
+		+ "#This list will improve with time: tweaks/feedbacks on various codecs/files are always welcome\n" 
+		+ "\n" 
+		+ "container.equals(\"iso\") : -nosync\n" 
+		+ "container.equals(\"avi\") && vcodec.equals(\"mpeg4\") && acodec.equals(\"mp3\") : -mc 0.1\n" 
+		+ "container.equals(\"flv\") : -mc 0.1\n" 
+		+ "container.equals(\"m4v\") : -mc 0.1 -noass\n" 
+		+ "container.equals(\"rm\")  : -mc 0.1\n" ;
 	
 	private static final String BUFFER_TYPE_FILE = "file";
 	
-	private static final int MAX_MAX_MEMORY_BUFFER_SIZE = 630;
+	private static final int MAX_MAX_MEMORY_BUFFER_SIZE = 600;
 	
 	private static final String CONFIGURATION_FILENAME = "PMS.conf";
 	private static final char LIST_SEPARATOR = ',';
@@ -110,7 +132,8 @@ public class PmsConfiguration {
 	public PmsConfiguration() throws ConfigurationException, IOException {
 		configuration = new PropertiesConfiguration();
 		configuration.setListDelimiter((char)0);
-		configuration.load(CONFIGURATION_FILENAME);
+		if (new File("PMS.conf").exists())
+			configuration.load(CONFIGURATION_FILENAME);
 		tempFolder = new TempFolder(getString(KEY_TEMP_FOLDER_PATH, null));
 		programPaths = createProgramPathsChain(configuration);
 		Locale.setDefault(new Locale(getLanguage()));
@@ -270,7 +293,7 @@ public class PmsConfiguration {
 	}
 
 	public void setMaxMemoryBufferSize(int value) {
-		if (value > 630) {
+		if (value > 600) {
 			value = MAX_MAX_MEMORY_BUFFER_SIZE;
 		}
 		configuration.setProperty(KEY_MAX_MEMORY_BUFFER_SIZE, value);		
@@ -510,8 +533,8 @@ public class PmsConfiguration {
 		configuration.setProperty(KEY_AUDIO_BITRATE, value);
 	}
 
-	public int getMaximumBitrate() {
-		return getInt(KEY_MAX_BITRATE, UNLIMITED_BITRATE);
+	public String getMaximumBitrate() {
+		return getString(KEY_MAX_BITRATE, UNLIMITED_BITRATE);
 	}
 
 	public void setMaximumBitrate(String value) {
@@ -588,6 +611,14 @@ public class PmsConfiguration {
 
 	public void setAvisynthScript(String value) {
 		configuration.setProperty(KEY_AVISYNTH_SCRIPT, value);
+	}
+	
+	public String getCodecSpecificConfig() {
+		return getString(KEY_CODEC_SPEC_SCRIPT, DEFAULT_CODEC_CONF_SCRIPT);
+	}
+
+	public void setCodecSpecificConfig(String value) {
+		configuration.setProperty(KEY_CODEC_SPEC_SCRIPT, value);
 	}
 
 	public int getMaxAudioBuffer() {
